--- a/style.css
+++ b/style.css
@@ -1,135 +1,88 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Ubuntu", sans-serif;
-    box-sizing: border-box;
+body{
+  height: 100vh;
+  background: url(images/bg.png) no-repeat center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card{
+  font-family: "Candara", sans-serif;
+  width: 340px;
+  overflow: hidden;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+}
+
+.card-image img{
+  width: 100%;
+  height: 160px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  object-fit: cover;
+}
+
+.profile-image img{
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  position: relative;
+  margin-top: -75px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 100px;
+  border: 10px solid #fff;
+  transition-duration: 0.4s;
+  transition-property: transform;
+}
+
+.profile-image img:hover{
+  transform: scale(1.1);
+}
+
+.card-content h3{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+}
+
+.card-content p{
+  font-size: 16px;
+  text-align: center;
+  padding: 0 20px 5px 10px;
+}
+
+.icons{
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 30px;
+}
+
+.icons a{
+  text-decoration: none;
+  font-size: 20px;
+  color: #0ABDE3;
+  padding: 0 14px;
+  transition-duration: 0.4s;
+  transition-property: transform;
+}
+
+.icons a:hover{
+  color: #000;
+  transform: scale(1.5);
+}
+.footer a{
     text-decoration: none;
-  }
-  
-  body{
-    height: 100vh;
-    background: url(bg.jpg) no-repeat center;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .profile-card{
-    width: 400px;
+    bottom: 0;
+    height: 6em;
+    left: 0;
+    line-height: 8em;
+    position: absolute;
     text-align: center;
-    border-radius: 8px;
-    overflow: hidden;
-  }
-  
-  .card-header{
-    background: #2c3a47;
-    padding: 60px 40px;
-  }
-  
-  .pic{
-    display: inline-block;
-    padding: 8px;
-    background: linear-gradient(130deg, #74b9ff, #e66767, #ff9900, #ea4335);
-    margin: auto;
-    border-radius: 50%;
-    background-size: 200% 200%;
-    animation: animated-gradient 2s linear infinite;
-  }
-  
-  @keyframes animated-gradient{
-    25%{
-      background-position: left bottom;
-    }
-    50%{
-      background-position: right bottom;
-    }
-    75%{
-      background-position: right top;
-    }
-    100%{
-      background-position: left top;
-    }
-  }
-  
-  .pic img{
-    display: block;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-  }
-  
-  .name{
-    color: #ffffff;
-    font-size: 28px;
-    font-weight: 600;
-    margin: 10px 0;
-  }
-  
-  .desc{
-    font-size: 18px;
-    color: #e66767;
-  }
-  
-  .sm{
-    display: flex;
-    justify-content: center;
-    margin: 20px 0;
-  }
-  
-  .sm a{
-    color: #f2f2f2;
-    width: 56px;
-    font-size: 22px;
-    transition: .3s linear;
-  }
-  
-  .sm a:hover{
-    color: #e66767;
-  }
-  
-  .contact-btn{
-    display: inline-block;
-    padding: 12px 50px;
-    color: #e66767;
-    border: 2px solid #e66767;
-    border-radius: 6px;
-    margin-top: 16px;
-    transition: .3s linear;
-  }
-  
-  .contact-btn:hover{
-    background: #e66767;
-    color: #f2f2f2;
-  }
-  
-  .card-footer{
-    background: #f4f4f4;
-    padding: 60px 10px;
-  }
-  
-  .numbers{
-    display: flex;
-    align-items: center;
-  }
-  
-  .item{
-    flex: 1;
-    text-transform: uppercase;
-    font-size: 13px;
-    color: #e66767;
-  }
-  
-  .item span{
-    display: block;
-    color: #2c3a47;
-    font-size: 30px;
-  }
-  
-  .border{
-    width: 1px;
-    height: 30px;
-    background: #bbb;
-  }
-  
-  
+    width: 100%;
+}
